Added sections to HTML

--- a/index.html
+++ b/index.html
@@ -5,12 +5,29 @@
 <head>
 
     <meta charset="utf-8">
-    <script src="./javascript.js" defer></script>
+    <link rel="stylesheet" href="style.css">
+    <script src="javascript.js" defer></script>
     <title>Pocket Calculator</title>
 </head>
 
 <body>
-    
+
+    <div id="header">
+
+    </div>
+
+    <div id="intro">
+
+    </div>
+
+    <div id="calculator">
+
+    </div>
+
+    <div id="footer">
+        
+    </div>
+
 </body>
 
 </html>
