--- a/index.html
+++ b/index.html
@@ -14,6 +14,11 @@
 
     <div id="header">
 
+        <div class="links">
+
+            <a href="https://github.com/zcecchetti/Calculator">GitHub</a>
+            <a href="https://www.linkedin.com/in/zach-cecchetti-a53825132/">LinkedIn</a>
+        </div>
     </div>
 
     <div id="intro">
@@ -22,10 +27,61 @@
 
     <div id="calculator">
 
+        <div id="calculatorContainer">
+
+            <div id="display">
+                <div id="displayItems">5+5</div>
+            </div>
+
+            <div id="buttons">
+
+                <div class="row">
+
+                    <button class="operator">(-)</button>
+                    <button class="operator">^</button>
+                    <button class="operator">%</button>
+                    <button id="clear" class="specialButton">c</button>
+                </div>
+
+                <div class="row">
+
+                    <button class="digit">7</button>
+                    <button class="digit">8</button>
+                    <button class="digit">9</button>
+                    <button class="operator">/</button>
+                </div>
+
+                <div class="row">
+
+                    <button class="digit">4</button>
+                    <button class="digit">5</button>
+                    <button class="digit">6</button>
+                    <button class="operator">x</button>
+                </div>
+
+                <div class="row">
+
+                    <button class="digit">1</button>
+                    <button class="digit">2</button>
+                    <button class="digit">3</button>
+                    <button class="operator">-</button>
+                </div>
+
+                <div class="row">
+
+                    <button class="digit">0</button>
+                    <button class="digit">.</button>
+                    <button id="execute" class="specialButton">=</button>
+                    <button class="operator">+</button>
+                </div>
+            </div>
+        </div>
+
     </div>
 
     <div id="footer">
-        
+
+        <p>© Copyright 2022 Zachary Cecchetti</p>
     </div>
 
 </body>
