Updated script to populate display when digits are selected with mouse

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <div id="calculatorContainer">
 
             <div id="display">
-                <div id="displayItems">5+5</div>
+                <div id="displayItems"></div>
             </div>
 
             <div id="buttons">
@@ -45,32 +45,32 @@
 
                 <div class="row">
 
-                    <button class="digit">7</button>
-                    <button class="digit">8</button>
-                    <button class="digit">9</button>
+                    <button id="7" class="digit">7</button>
+                    <button id="8" class="digit">8</button>
+                    <button id="9" class="digit">9</button>
                     <button class="operator">/</button>
                 </div>
 
                 <div class="row">
 
-                    <button class="digit">4</button>
-                    <button class="digit">5</button>
-                    <button class="digit">6</button>
+                    <button id="4" class="digit">4</button>
+                    <button id="5" class="digit">5</button>
+                    <button id="6" class="digit">6</button>
                     <button class="operator">x</button>
                 </div>
 
                 <div class="row">
 
-                    <button class="digit">1</button>
-                    <button class="digit">2</button>
-                    <button class="digit">3</button>
+                    <button id="1" class="digit">1</button>
+                    <button id="2" class="digit">2</button>
+                    <button id="3" class="digit">3</button>
                     <button class="operator">-</button>
                 </div>
 
                 <div class="row">
 
-                    <button class="digit">0</button>
-                    <button class="digit">.</button>
+                    <button id="0" class="digit">0</button>
+                    <button id="dot" class="digit">.</button>
                     <button id="execute" class="specialButton">=</button>
                     <button class="operator">+</button>
                 </div>
