Added event listeners for operator buttons and javascript to perform math functions when user clicks buttons

--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
 
                 <div class="row">
 
-                    <button class="operator">(-)</button>
-                    <button class="operator">^</button>
-                    <button class="operator">%</button>
+                    <button id="negative" class="operator">(-)</button>
+                    <button id="power" class="operator">^</button>
+                    <button id="remainder" class="operator">%</button>
                     <button id="clear" class="specialButton">c</button>
                 </div>
 
@@ -48,7 +48,7 @@
                     <button id="7" class="digit">7</button>
                     <button id="8" class="digit">8</button>
                     <button id="9" class="digit">9</button>
-                    <button class="operator">/</button>
+                    <button id="divide" class="operator">/</button>
                 </div>
 
                 <div class="row">
@@ -56,7 +56,7 @@
                     <button id="4" class="digit">4</button>
                     <button id="5" class="digit">5</button>
                     <button id="6" class="digit">6</button>
-                    <button class="operator">x</button>
+                    <button id="multiply" class="operator">x</button>
                 </div>
 
                 <div class="row">
@@ -64,7 +64,7 @@
                     <button id="1" class="digit">1</button>
                     <button id="2" class="digit">2</button>
                     <button id="3" class="digit">3</button>
-                    <button class="operator">-</button>
+                    <button id="minus" class="operator">-</button>
                 </div>
 
                 <div class="row">
@@ -72,7 +72,7 @@
                     <button id="0" class="digit">0</button>
                     <button id="dot" class="digit">.</button>
                     <button id="execute" class="specialButton">=</button>
-                    <button class="operator">+</button>
+                    <button id="plus" class="operator">+</button>
                 </div>
             </div>
         </div>
