Fixed bug that caused num2 to not reset to null

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <div id="calculatorContainer">
 
             <div id="display">
-                <div id="displayItems"></div>
+                <div id="displayItems">0</div>
             </div>
 
             <div id="buttons">
